--- a/app/src/main/res/layout/activity_tournament_view.xml
+++ b/app/src/main/res/layout/activity_tournament_view.xml
@@ -2,13 +2,13 @@
 <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#801976D2"
     tools:context=".CatchEntryTournament">
 
@@ -50,7 +50,9 @@
         android:id="@+id/btnStartFishing"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="5dp"
         android:background="@color/softlock_blue"
         android:gravity="center"
         android:shadowColor="#8FC16D"
@@ -58,29 +60,29 @@
         android:textColor="@color/clip_white"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginEnd="5dp"
-        app:layout_constraintHeight_percent="0.09"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintWidth_percent="0.55" />
+        app:layout_constraintHeight_percent="0.09"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/btnAlarm"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
         android:id="@+id/btnAlarm"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintWidth_percent="0.40"
+        app:layout_constraintHeight_percent="0.09"
         android:background="#80C5D2E8"
         android:gravity="center"
         android:hint="@string/days_End_time"
         android:text="@string/alarm"
         android:textAllCaps="true"
         android:textColor="@color/clip_red"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/btnStartFishing"
         app:layout_constraintStart_toStartOf="@id/timeNOW"
-        app:layout_constraintHeight_percent="0.085"
-        app:layout_constraintStart_toEndOf="@id/btnStartFishing"
-        app:layout_constraintWidth_percent="0.3"/>
+        app:layout_constraintTop_toBottomOf="@id/imageView"/>
 
 
     <TextView
@@ -182,7 +184,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -201,7 +203,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -216,7 +218,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -233,7 +235,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -251,7 +253,7 @@
         app:layout_constraintHeight_percent="0.085"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -267,7 +269,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -285,7 +287,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -303,7 +305,7 @@
         app:layout_constraintWidth_percent="0.35"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -318,7 +320,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:textAlignment="center"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textColor="@color/black"
         android:textSize="45sp"
         android:textStyle="bold"
@@ -333,7 +335,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -366,7 +368,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:textAlignment="center"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textColor="@color/black"
         android:textSize="45sp"
         android:textStyle="bold"
@@ -475,7 +477,7 @@
     <TextView
         android:id="@+id/total_weightView"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="@string/weight_lbs_ozs"
@@ -527,7 +529,7 @@
     <TextView
         android:id="@+id/txtLbHolder"
         android:layout_width="wrap_content"
-        android:layout_height="72dp"
+        android:layout_height="wrap_content"
         android:gravity="bottom"
         android:text="@string/lbs"
         android:textColor="@color/black"
@@ -559,7 +561,7 @@
     <TextView
         android:id="@+id/txtHolderOzs"
         android:layout_width="wrap_content"
-        android:layout_height="72dp"
+        android:layout_height="wrap_content"
         android:textScaleX="0.3"
         android:text="@string/ozs"
         android:gravity="bottom"
@@ -573,10 +575,10 @@
     <Button
         android:id="@+id/btnMainPg"
         android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:padding="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/btn_outline_green"
+        android:paddingHorizontal="10dp"
         android:text="@string/main_page"
         android:textAlignment="gravity"
         android:textSize="25sp"
@@ -586,16 +588,16 @@
     <Button
         android:id="@+id/btnMenu"
         android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:padding="5dp"
+        android:layout_height="50dp"
+        android:paddingHorizontal="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/btn_outline_blue"
         android:text="@string/setup"
         android:textAlignment="gravity"
         android:textSize="25sp"
-        app:layout_constraintTop_toTopOf="@id/btnMainPg"
         app:layout_constraintEnd_toEndOf="@+id/firstDecWeight"
-        app:layout_constraintTop_toBottomOf="@id/totalRealWeight"
- />
+        app:layout_constraintTop_toBottomOf="@id/totalRealWeight" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
