--- a/app/src/main/res/layout/activity_tournament_view_centimeters.xml
+++ b/app/src/main/res/layout/activity_tournament_view_centimeters.xml
@@ -3,13 +3,13 @@
 <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/clip_yellow"
     tools:context=".CatchEntryTournamentCentimeters">
 
@@ -52,7 +52,8 @@
         android:id="@+id/btnAlarmCms"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintWidth_percent="0.3"
+        android:layout_marginTop="4dp"
+        app:layout_constraintWidth_percent="0.40"
         app:layout_constraintHeight_percent="0.09"
         android:background="#80C5D2E8"
         android:gravity="center"
@@ -60,19 +61,19 @@
         android:text="@string/alarm"
         android:textAllCaps="true"
         android:textColor="@color/clip_red"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textStyle="bold"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/timeNOW"
-        app:layout_constraintStart_toStartOf="@id/timeNOW" />
+        app:layout_constraintStart_toStartOf="@id/timeNOW"
+        app:layout_constraintTop_toBottomOf="@id/imageView" />
 
 
     <Button
         android:id="@+id/btnStartFishingCms"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.09"
-        app:layout_constraintWidth_percent="0.55"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="5dp"
         android:background="@color/softlock_blue"
         android:gravity="center"
         android:shadowColor="#8FC16D"
@@ -80,9 +81,11 @@
         android:textColor="@color/clip_white"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnAlarmCms" />
+        app:layout_constraintHeight_percent="0.09"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/btnAlarmCms"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"  />
 
     <TextView
         android:id="@+id/txtCmsColorLetter1"
@@ -183,7 +186,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -200,7 +203,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -217,7 +220,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -234,7 +237,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -251,7 +254,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -268,7 +271,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -286,7 +289,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -302,7 +305,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -318,7 +321,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -334,7 +337,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -350,7 +353,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -366,7 +369,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -470,7 +473,7 @@
     <TextView
         android:id="@+id/total_LengthViewCms"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="@string/total_length_cms"
@@ -519,9 +522,9 @@
     <TextView
         android:id="@+id/txtCmsHolder"
         android:layout_width="wrap_content"
-        android:layout_height="72dp"
+        android:layout_height="wrap_content"
         android:gravity="bottom"
-        android:text="."
+        android:text="@string/dot"
         android:textColor="@color/black"
         android:textSize="80sp"
         android:textStyle="bold"
@@ -546,13 +549,13 @@
     <TextView
         android:id="@+id/txtHolderCms"
         android:layout_width="wrap_content"
-        android:layout_height="72dp"
+        android:layout_height="wrap_content"
         android:gravity="bottom"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="8dp"
         android:text="@string/cms"
         android:textColor="@color/black"
         android:textScaleX="0.5"
-        android:textSize="60sp"
+        android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/totalDecLengthCms"
         app:layout_constraintStart_toEndOf="@id/totalDecLengthCms" />
@@ -560,31 +563,29 @@
     <Button
         android:id="@+id/btnSetUpCms"
         android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        app:layout_constraintWidth_percent="0.25"
-        app:layout_constraintHeight_percent="0.11"
+        android:layout_height="50dp"
         android:paddingHorizontal="10dp"
-        android:background="@drawable/btn_outline_green"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/btn_outline_blue"
         android:text="@string/setup"
         android:textAlignment="gravity"
         android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="@id/totalDecLengthCms"
-        app:layout_constraintTop_toTopOf="@id/btnMainCms"  />
+        app:layout_constraintEnd_toEndOf="@id/fifthDecLengthCms"
+        app:layout_constraintTop_toBottomOf="@id/totalRealLengthCms"  />
 
     <Button
         android:id="@+id/btnMainCms"
         android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/btn_outline_blue"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/btn_outline_green"
+        android:paddingHorizontal="10dp"
         android:text="@string/main_page"
         android:textAlignment="gravity"
         android:textSize="25sp"
-        app:layout_constraintHeight_percent="0.11"
-        app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintEnd_toEndOf="@id/totalRealLengthCms"
-        app:layout_constraintTop_toBottomOf="@id/totalRealLengthCms"
-        app:layout_constraintWidth_percent="0.25" />
+        app:layout_constraintTop_toBottomOf="@id/totalRealLengthCms" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
