--- a/app/src/main/res/layout/activity_tournament_view_inches.xml
+++ b/app/src/main/res/layout/activity_tournament_view_inches.xml
@@ -3,12 +3,12 @@
 <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/Log_red_secondary"
     tools:context=".CatchEntryTournamentInches">
 
@@ -53,27 +53,25 @@
         android:id="@+id/btnAlarmInches"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintWidth_percent="0.3"
-        app:layout_constraintHeight_percent="0.085"
+        android:layout_marginTop="4dp"
+        app:layout_constraintWidth_percent="0.40"
+        app:layout_constraintHeight_percent="0.09"
         android:background="#80C5D2E8"
         android:gravity="center"
         android:hint="@string/days_End_time"
         android:text="@string/alarm"
         android:textAllCaps="true"
         android:textColor="@color/clip_red"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textStyle="bold"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/timeNOW"
-        app:layout_constraintStart_toStartOf="@id/timeNOW" />
+        app:layout_constraintStart_toStartOf="@id/timeNOW"
+        app:layout_constraintTop_toBottomOf="@id/imageView"  />
 
     <Button
         android:id="@+id/btnStartFishingInches"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.09"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginTop="4dp"
         android:background="@color/softlock_blue"
         android:gravity="center"
         android:shadowColor="#8FC16D"
@@ -81,9 +79,12 @@
         android:textColor="@color/clip_white"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintHeight_percent="0.09"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintWidth_percent="0.55" />
+        app:layout_constraintStart_toEndOf="@id/btnAlarmInches"/>
 
 
     <TextView
@@ -185,7 +186,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -202,7 +203,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -219,7 +220,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -236,7 +237,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -253,7 +254,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -270,7 +271,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -288,7 +289,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_8ths"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -304,7 +305,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_8ths"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -320,7 +321,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_8ths"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -336,7 +337,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_8ths"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -352,7 +353,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_8ths"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -368,7 +369,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_8ths"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -472,7 +473,7 @@
     <TextView
         android:id="@+id/total_LengthView"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:gravity="center"
         android:text="@string/length_inches"
@@ -522,7 +523,7 @@
     <TextView
         android:id="@+id/txtLbHolder"
         android:layout_width="wrap_content"
-        android:layout_height="72dp"
+        android:layout_height="wrap_content"
         android:gravity="bottom"
         android:layout_marginStart="5dp"
         android:text="@string/inches"
@@ -553,14 +554,14 @@
     <TextView
         android:id="@+id/txtHolderOzs"
         android:layout_width="wrap_content"
-        android:layout_height="72dp"
+        android:layout_height="wrap_content"
         android:gravity="bottom"
         android:text="@string/_8ths"
         android:textColor="@color/black"
         android:textScaleX="0.3"
         android:textSize="60sp"
         android:textStyle="bold"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="1dp"
         app:layout_constraintBottom_toBottomOf="@id/totalDecLengthInches"
         app:layout_constraintStart_toEndOf="@id/totalDecLengthInches" />
 
@@ -568,32 +569,29 @@
     <Button
         android:id="@+id/btnMainInches"
         android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/btn_outline_blue"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/btn_outline_green"
+        android:paddingHorizontal="10dp"
         android:text="@string/main_page"
         android:textAlignment="gravity"
         android:textSize="25sp"
-        app:layout_constraintHeight_percent="0.11"
-        app:layout_constraintHorizontal_bias="0.103"
-        app:layout_constraintEnd_toEndOf="@id/firstRealLengthInches"
-        app:layout_constraintTop_toBottomOf="@id/totalRealLengthInches"
-        app:layout_constraintWidth_percent="0.25" />
+        app:layout_constraintStart_toStartOf="@id/firstRealLengthInches"
+        app:layout_constraintTop_toBottomOf="@id/totalRealLengthInches"  />
 
     <Button
         android:id="@+id/btnSetUpInches"
         android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="50dp"
         android:paddingHorizontal="10dp"
-        android:background="@drawable/btn_outline_green"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/btn_outline_blue"
         android:text="@string/setup"
         android:textAlignment="gravity"
         android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="@id/totalDecLengthInches"
-        app:layout_constraintTop_toBottomOf="@id/totalRealLengthInches"
-        app:layout_constraintWidth_percent="0.25" />
+        app:layout_constraintEnd_toEndOf="@id/fifthDecLengthInches"
+        app:layout_constraintTop_toBottomOf="@id/totalRealLengthInches" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
