--- a/app/src/main/res/layout/activity_tournament_view_kgs.xml
+++ b/app/src/main/res/layout/activity_tournament_view_kgs.xml
@@ -8,7 +8,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/clip_orange"
     tools:context=".CatchEntryTournamentKgs">
 
@@ -52,7 +52,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
-        app:layout_constraintWidth_percent="0.35"
+        app:layout_constraintWidth_percent="0.40"
         app:layout_constraintHeight_percent="0.09"
         android:background="#80C5D2E8"
         android:gravity="center"
@@ -60,7 +60,7 @@
         android:text="@string/alarm"
         android:textAllCaps="true"
         android:textColor="@color/clip_red"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/timeNOW"
         app:layout_constraintTop_toBottomOf="@id/imageView"/>
@@ -78,11 +78,12 @@
         android:textColor="@color/clip_white"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         app:layout_constraintHeight_percent="0.09"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintWidth_percent="0.55" />
+       app:layout_constraintStart_toEndOf="@id/btnAlarmKgs" />
 
     <TextView
         android:id="@+id/txtKgsColorLetter1"
@@ -183,7 +184,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -200,7 +201,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -217,7 +218,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -234,7 +235,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -251,7 +252,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -268,7 +269,7 @@
         android:layout_marginTop="5dp"
         android:background="@color/grey"
         android:gravity="center"
-        android:text="3 Lbs"
+        android:text="@string/_3_lbs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -286,7 +287,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -302,7 +303,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -318,7 +319,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -334,7 +335,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -350,7 +351,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -366,7 +367,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:background="@color/grey"
-        android:text="18 ozs"
+        android:text="@string/_18_ozs"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="45sp"
@@ -470,7 +471,7 @@
     <TextView
         android:id="@+id/total_weightView"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/weight_kgs"
         android:textAlignment="center"
@@ -517,9 +518,9 @@
     <TextView
         android:id="@+id/txtLbHolder"
         android:layout_width="wrap_content"
-        android:layout_height="72dp"
+        android:layout_height="wrap_content"
         android:gravity="bottom"
-        android:text="."
+        android:text="@string/dot"
         android:textColor="@color/black"
         android:textScaleX="1"
         android:textSize="80sp"
@@ -545,7 +546,7 @@
     <TextView
         android:id="@+id/txtHolderOzs"
         android:layout_width="wrap_content"
-        android:layout_height="72dp"
+        android:layout_height="wrap_content"
         android:gravity="bottom"
         android:text="@string/kgs"
         android:textColor="@color/black"
@@ -560,9 +561,9 @@
         android:id="@+id/btnMainKgs"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:padding="5dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/btn_outline_green"
+        android:paddingHorizontal="10dp"
         android:text="@string/main_page"
         android:textAlignment="gravity"
         android:textSize="25sp"
@@ -572,8 +573,8 @@
     <Button
         android:id="@+id/btnSetUpKgs"
         android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:padding="5dp"
+        android:layout_height="50dp"
+        android:paddingHorizontal="10dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/btn_outline_blue"
