--- a/app/src/main/res/drawable/popup_background.xml
+++ b/app/src/main/res/drawable/popup_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FFFFFF"/> <!-- Background color -->
+    <solid android:color="#FBC02D"/> <!-- Background color -->
     <corners android:radius="16dp"/> <!-- Rounded corners -->
     <padding android:left="16dp" android:right="16dp" android:top="16dp" android:bottom="16dp"/>
     <stroke android:width="2dp" android:color="#000000"/> <!-- Black border -->
