--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#801976D2"
-    android:layout_marginBottom="15dp"
     android:contentDescription="@string/tournament_activity_description">
 
 
@@ -188,10 +187,11 @@
     <TextView
         android:id="@+id/txtSpaceHolder"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnVCC" />
+        app:layout_constraintTop_toBottomOf="@id/btnVCC"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
