--- a/app/src/main/res/layout/popup_map_query.xml
+++ b/app/src/main/res/layout/popup_map_query.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/very_lite_grey"
     android:fillViewport="true"
     android:scrollIndicators="right"
@@ -21,12 +21,12 @@
             android:id="@+id/imgMapQueryBass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:alpha="0.20"
             android:background="@color/very_lite_grey"
+            android:scaleY="1.5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/llHeaderMapQuery"
             app:srcCompat="@drawable/bass_jumping_boater" />
 
         <ImageView
@@ -37,7 +37,7 @@
             android:layout_marginStart="5dp"
             android:background="@color/very_lite_grey"
             android:contentDescription="@string/app_image_description"
-            android:scaleX="2.5"
+            android:scaleX="2."
             android:src="@drawable/catch_call_logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
